# cpp-template-clarahw17

./: CMakeLists.txt
docs/source/: index.rst
include/: zipfs.h
src/: CMakeLists.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp
tests/: CMakeLists.txt  test_zipfs.cpp
